[package]
name = "Real-Need-For-Racing"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
rand = "0.9.1"
bevy_embedded_assets = "0.8"
bevy_kira_audio = "0.16.0"
raw-window-handle = "0.5"     
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }


[build-dependencies]
winres = "0.1"
raw-window-handle = "0.5"
